<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/gambar_log"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:hintTextColor="#1D45C0"
        >

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:theme="@style/EditTextStyle2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        app:hintTextColor="#1D45C0">

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:theme="@style/EditTextStyle2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        app:hintTextColor="#1D45C0">

        <EditText
            android:id="@+id/registerFirstName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstNameHint"
            android:inputType="text"
            android:theme="@style/EditTextStyle2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        app:hintTextColor="#1D45C0">

        <EditText
            android:id="@+id/registerLastName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastNameHint"
            android:inputType="text"
            android:theme="@style/EditTextStyle2" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/registerButton"
        android:layout_width="120dp"
        android:layout_marginTop="40dp"
        android:layout_height="40dp"
        android:text="@string/registerHint"
        android:textColor="@color/white"
        android:background="#5782BB"/>

    <TextView
        android:id="@+id/redirectLoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#5782BB"
        android:gravity="center"
        android:text="@string/redirectLogin"
        android:textStyle="bold" />



</LinearLayout>
